--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -53,6 +53,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown">Master <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#master/category">Category</a></li>
+                            <li><a href="#master/poli">Poli</a></li>
                             <li><a href="#master/dokter">Dokter</a></li>
                             <li><a href="#master/loket">Loket</a></li>
                         </ul>
@@ -139,6 +140,7 @@
         <script src="scripts/services/permissionservice.js"></script>
         <script src="scripts/services/roleservice.js"></script>
         <script src="scripts/services/loketservice.js"></script>
+        <script src="scripts/services/poliservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
