--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -141,6 +141,8 @@
         <script src="scripts/services/roleservice.js"></script>
         <script src="scripts/services/loketservice.js"></script>
         <script src="scripts/services/poliservice.js"></script>
+        <script src="scripts/services/categoryservice.js"></script>
+        <script src="scripts/controllers/category.js"></script>
         <!-- endbuild -->
 </body>
 </html>
