--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -143,6 +143,7 @@
         <script src="scripts/services/poliservice.js"></script>
         <script src="scripts/services/categoryservice.js"></script>
         <script src="scripts/controllers/category.js"></script>
+        <script src="scripts/services/dokterservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
