service generate kuota

--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -144,6 +144,7 @@
         <script src="scripts/services/categoryservice.js"></script>
         <script src="scripts/controllers/category.js"></script>
         <script src="scripts/services/dokterservice.js"></script>
+        <script src="scripts/controllers/generate_kuota.js"></script>
         <!-- endbuild -->
 </body>
 </html>
