--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -1,150 +1,154 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>RSMM</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootswatch/cosmo/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
-    <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body ng-app="managementUiApp">
-    <!--[if lte IE 8]>
+
+<head>
+  <meta charset="utf-8">
+  <title>RSMM</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!-- build:css(.) styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/bootswatch/cosmo/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
+  <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css" />
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
+</head>
+
+<body ng-app="managementUiApp">
+  <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="header" ng-controller="NavCtrl">
-      <div class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+  <!-- Add your site or application content here -->
+  <div class="header" ng-controller="NavCtrl">
+    <div class="navbar navbar-inverse" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">RSMM</a>
-          </div>
+          <a class="navbar-brand" href="#/">RSMM</a>
+        </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+        <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-				<li class="dropdown" ng-show="flagSystem >= 0">
-                        <a class="dropdown-toggle" data-toggle="dropdown">System <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#system/permission">Permission</a></li>
-                            <li><a href="#system/role">Role</a></li>
-                            <li><a href="#system/user">User</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown" ng-show="flagMaster >= 0">
-                        <a class="dropdown-toggle" data-toggle="dropdown">Master <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#master/category">Category</a></li>
-                            <li><a href="#master/poli">Poli</a></li>
-                            <li><a href="#master/dokter">Dokter</a></li>
-                            <li><a href="#master/loket">Loket</a></li>
-                        </ul>
-                    </li>
-              <li ng-show="flagLoket >= 0"><a ng-href="#/about">Loket</a></li>
-              <li class="dropdown" ng-show="flagReport >= 0">
-                        <a class="dropdown-toggle" data-toggle="dropdown">Report <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#report/harian">Report Antrian Harian</a></li>
-                            <li><a href="#report">Report Antrian</a></li>
-                        </ul>
-				</li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown" align="right">
-                        <a class="dropdown-toggle" data-toggle="dropdown" 
-                           style="cursor: pointer;">{{infoUser.user}} - {{infoUser.info}} <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a ng-click="logout()">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-          </div>
+          <ul class="nav navbar-nav">
+            <li class="dropdown" ng-show="flagSystem >= 0">
+              <a class="dropdown-toggle" data-toggle="dropdown">System <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#system/permission">Permission</a></li>
+                <li><a href="#system/role">Role</a></li>
+                <li><a href="#system/user">User</a></li>
+              </ul>
+            </li>
+            <li class="dropdown" ng-show="flagMaster >= 0">
+              <a class="dropdown-toggle" data-toggle="dropdown">Master <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#master/category">Category</a></li>
+                <li><a href="#master/poli">Poli</a></li>
+                <li><a href="#master/dokter">Jadwal Dokter</a></li>
+                <li><a href="#master/loket">Loket</a></li>
+              </ul>
+            </li>
+            <li ng-show="flagGenerate >= 0"><a ng-href="#/generate/kuota">Generate</a></li>
+            <li ng-show="flagLoket >= 0"><a ng-href="#/about">Loket</a></li>
+            <li class="dropdown" ng-show="flagReport >= 0">
+              <a class="dropdown-toggle" data-toggle="dropdown">Report <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#report/harian">Report Antrian Harian</a></li>
+                <li><a href="#report">Report Antrian</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown" align="right">
+              <a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;">{{infoUser.user}} - {{infoUser.info}} <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a ng-click="logout()">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="container">
+  <div class="container">
     <div ng-view=""></div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
     </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
+  </div>
 
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+  <script>
+    !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+  </script>
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-ui-select/dist/select.js"></script>
-    <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
-    <script src="bower_components/bootbox/bootbox.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+  <!-- build:js(.) scripts/vendor.js -->
+  <!-- bower:js -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-aria/angular-aria.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="bower_components/angular-touch/angular-touch.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/angular-ui-select/dist/select.js"></script>
+  <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
+  <script src="bower_components/bootbox/bootbox.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/services/configservice.js"></script>
-        <script src="scripts/controllers/poli.js"></script>
-        <script src="scripts/controllers/nav.js"></script>
-        <script src="scripts/services/userservice.js"></script>
-        <script src="scripts/controllers/user.js"></script>
-        <script src="scripts/controllers/permission.js"></script>
-        <script src="scripts/controllers/role.js"></script>
-        <script src="scripts/controllers/dokter.js"></script>
-        <script src="scripts/controllers/tvsetting.js"></script>
-        <script src="scripts/controllers/loket.js"></script>
-        <script src="scripts/services/permissionservice.js"></script>
-        <script src="scripts/services/roleservice.js"></script>
-        <script src="scripts/services/loketservice.js"></script>
-        <script src="scripts/services/poliservice.js"></script>
-        <script src="scripts/services/categoryservice.js"></script>
-        <script src="scripts/controllers/category.js"></script>
-        <script src="scripts/services/dokterservice.js"></script>
-        <script src="scripts/controllers/generate_kuota.js"></script>
-        <!-- endbuild -->
+  <!-- build:js({.tmp,app}) scripts/scripts.js -->
+  <script src="scripts/app.js"></script>
+  <script src="scripts/controllers/main.js"></script>
+  <script src="scripts/controllers/about.js"></script>
+  <script src="scripts/services/configservice.js"></script>
+  <script src="scripts/controllers/poli.js"></script>
+  <script src="scripts/controllers/nav.js"></script>
+  <script src="scripts/services/userservice.js"></script>
+  <script src="scripts/controllers/user.js"></script>
+  <script src="scripts/controllers/permission.js"></script>
+  <script src="scripts/controllers/role.js"></script>
+  <script src="scripts/controllers/dokter.js"></script>
+  <script src="scripts/controllers/tvsetting.js"></script>
+  <script src="scripts/controllers/loket.js"></script>
+  <script src="scripts/services/permissionservice.js"></script>
+  <script src="scripts/services/roleservice.js"></script>
+  <script src="scripts/services/loketservice.js"></script>
+  <script src="scripts/services/poliservice.js"></script>
+  <script src="scripts/services/categoryservice.js"></script>
+  <script src="scripts/controllers/category.js"></script>
+  <script src="scripts/services/dokterservice.js"></script>
+  <script src="scripts/controllers/generate_kuota.js"></script>
+  <script src="scripts/services/generatekuotaservice.js"></script>
+  <!-- endbuild -->
 </body>
+
 </html>
