get antrian number

--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -61,7 +61,7 @@
               </ul>
             </li>
             <li ng-show="flagGenerate >= 0"><a ng-href="#/generate/kuota">Generate</a></li>
-            <li ng-show="flagLoket >= 0"><a ng-href="#/about">Loket</a></li>
+            <li ng-show="flagLoket >= 0"><a ng-href="#/transaksi/loket">Loket</a></li>
             <li class="dropdown" ng-show="flagReport >= 0">
               <a class="dropdown-toggle" data-toggle="dropdown">Report <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -148,6 +148,8 @@
   <script src="scripts/services/dokterservice.js"></script>
   <script src="scripts/controllers/generate_kuota.js"></script>
   <script src="scripts/services/generatekuotaservice.js"></script>
+  <script src="scripts/controllers/transaksi_loket.js"></script>
+  <script src="scripts/services/transaksiloketservice.js"></script>
   <!-- endbuild -->
 </body>
 
