--- a/management-ui/yo/app/index.html
+++ b/management-ui/yo/app/index.html
@@ -158,6 +158,7 @@
   <script src="scripts/services/screentvservice.js"></script>
   <script src="scripts/services/reportkuotaservice.js"></script>
   <script src="scripts/services/reportantrianservice.js"></script>
+  <script src="scripts/services/historyservice.js"></script>
   <!-- endbuild -->
 </body>
 
